--- a/ContractInteraction/package.json
+++ b/ContractInteraction/package.json
@@ -5,7 +5,7 @@
   "main": "deploy.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node interaction.js"
+    "start": "node test.js"
   },
   "repository": {
     "type": "git",
