--- a/ATSContract/pom.xml
+++ b/ATSContract/pom.xml
@@ -57,6 +57,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>aion.contract</groupId>
+            <artifactId>avm</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
