--- a/ATS/pom.xml
+++ b/ATS/pom.xml
@@ -16,7 +16,7 @@
         <aion4j.plugin.version>0.6.7</aion4j.plugin.version>
         <avm.lib.dir>${project.basedir}/lib</avm.lib.dir>
 
-        <contract.main.class>org.aion.HelloAvm</contract.main.class>
+        <contract.main.class>org.aion.ATSTokenContract</contract.main.class>
     </properties>
 
     <dependencies>
