--- a/ATS/pom.xml
+++ b/ATS/pom.xml
@@ -13,7 +13,7 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
 
-        <aion4j.plugin.version>0.6.7</aion4j.plugin.version>
+        <aion4j.plugin.version>0.7.1-SNAPSHOT</aion4j.plugin.version>
         <avm.lib.dir>${project.basedir}/lib</avm.lib.dir>
 
         <contract.main.class>org.aion.ATSTokenContract</contract.main.class>
@@ -157,4 +157,14 @@
             </build>
         </profile>
     </profiles>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>sonatype-snapshots</id>
+            <name>Sonatype Public</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
