--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 language: java
 jdk: openjdk10
 install: true
-script: ./mvnw initialize && ./mvnw clean install test
+script: ./mvnw initialize && ./mvnw clean install
 cache:
   directories:
     - $HOME/.m2
