--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.aion</groupId>
-    <artifactId>AS041Token</artifactId>
+    <artifactId>AionFungibleToken</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>AS041Token</name>
+    <name>AionFungibleToken</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -52,7 +52,7 @@
         <!-- Don't change the following dependency. This is required to compile & run test cases. The avm.jar for the project will be
         installed into the local maven repository during mvn initialize phase. -->
         <dependency>
-            <groupId>org.aion.AS041Token</groupId>
+            <groupId>org.aion.AionFungibleToken</groupId>
             <artifactId>avm</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
@@ -117,7 +117,7 @@
                             <goal>install-file</goal>
                         </goals>
                         <configuration>
-                            <groupId>org.aion.AS041Token</groupId>
+                            <groupId>org.aion.AionFungibleToken</groupId>
                             <artifactId>avm</artifactId>
                             <version>1.0-SNAPSHOT</version>
                             <packaging>jar</packaging>
@@ -158,14 +158,4 @@
             </build>
         </profile>
     </profiles>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>sonatype-snapshots</id>
-            <name>Sonatype Public</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
 </project>
